[package]
name = "samod-minimal-server"
version = "0.1.0"
edition = "2021"
publish = false
description = "Minimal samod WebSocket sync server for bug reproduction"

[workspace]

[dependencies]
samod = { git = "https://github.com/shikokuchuo/samod.git", branch = "quarto", features = ["tokio", "axum", "tungstenite"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
